--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea/
 *.iml
 ### Java ###
-# Compiled class file
+## Compiled class file
 *.class
 # Log file
 *.log
@@ -9,7 +9,7 @@
 *.ctxt
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-# Package Files #
+# Package Files 
 *.jar
 *.war
 *.nar
