--- a/week08/day1/src/main/resources/application.properties
+++ b/week08/day1/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/todo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=$[USERNAME]
+spring.datasource.password=$[PASSWORD]
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
+spring.profiles.active=prod
